packages/typ/tests/fixtures/diagnostics/0300_fun_higher_order_callback_mismatch_06.ml.infer.expected
File "0300_fun_higher_order_callback_mismatch_06.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0300_fun_higher_order_callback_mismatch_06 is not a valid module name.

File "0300_fun_higher_order_callback_mismatch_06.ml", line 2, characters 32-33:
2 | let _ = apply_zeta (fun b -> if b then 5 else 6)
                                    ^
Error: The value b has type int but an expression was expected of type 
       bool because it is in the condition of an if-statement
