packages/typ/tests/fixtures/diagnostics/0300_fun_higher_order_callback_mismatch_06.ml
let apply_zeta (f : int -> int) = f 5
let _ = apply_zeta (fun b -> if b then 5 else 6)
